# opus-rs

./: .gitignore  COPYING  Cargo.toml  README.md  diag_silk_nlsf.c  verify_silk_encode.c
benches/: opus_bench.rs
cargo-flamegraph.trace/Trace1.run/: RunIssues.storedata
examples/: perf_test.rs  profile_48k.rs  profile_silk.rs  sine_test.rs  stereo_test.rs  test_pulses.rs  test_pulses3.rs  test_roundtrip.rs  test_simple.rs  test_vad.rs  wav_test.rs  wav_test_c.rs
fixtures/: .gitignore
fuzz/: Cargo.toml  README.md  fuzz.sh
fuzz/fuzz_targets/: fuzz_celt_decoder_boundary.rs  fuzz_celt_encoder.rs  fuzz_celt_large_frame.rs  fuzz_decoder.rs  fuzz_encoder.rs  fuzz_encoder_boundary.rs  fuzz_hybrid_mode.rs  fuzz_multi_frame.rs  fuzz_overflow.rs  fuzz_packet_parsing.rs  fuzz_roundtrip.rs  fuzz_silk_decoder.rs  fuzz_silk_encoder.rs
src/: bands.rs  celt.rs  celt_lpc.rs  float_convert.rs  hp_cutoff.rs  kiss_fft.rs  lib.rs  main.rs  mdct.rs  modes.rs  pitch.rs  pvq.rs  quant_bands.rs  range_coder.rs  rate.rs
src/silk/: ana_filt_bank_1.rs  biquad_alt.rs  control_codec.rs  control_fixed.rs  control_snr.rs  dec_api.rs  decode_core.rs  decode_frame.rs  decode_indices.rs  decode_parameters.rs  decode_pulses.rs  decoder_structs.rs  define.rs  enc_api.rs  encode_indices.rs  encode_pulses.rs  gain_quant.rs  hp_variable_cutoff.rs  init_decoder.rs  init_encoder.rs  interpolate.rs  lin2log.rs  log2lin.rs  lp_variable_cutoff.rs  lpc_analysis.rs  lpc_fit.rs  ltp_analysis.rs  macros.rs  mod.rs  nlsf.rs  nlsf_decode.rs  nlsf_del_dec_quant.rs  nlsf_encode.rs  nlsf_unpack.rs  noise_shape_analysis.rs  nsq.rs  nsq_del_dec.rs  pitch_analysis.rs  resampler.rs  shell_coder.rs  (+9 more)
tests/: analyze_bitstream_diff.rs  bitstream_exact_compare.rs  celt_budget_test.rs  celt_loopback_test.rs  celt_multi_frame.rs  celt_realistic_test.rs  celt_silence.rs  celt_synthesis_test.rs  debug_12khz.rs  diff_trace.rs  dump_celt_hex.rs  energy_norm_test.rs  hybrid_48k_audio_test.rs  hybrid_48k_test.rs  hybrid_celt_fix_tests.rs  hybrid_mode_test.rs  mdct_basic_test.rs  mdct_gain_test.rs  mdct_identity_full_test.rs  mdct_identity_minimal.rs  mdct_identity_test.rs  mdct_identity_test_v2.rs  mdct_identity_test_v3.rs  mdct_loopback_debug.rs  mdct_loopback_test.rs  mdct_passthrough_test.rs  mdct_pulse_test.rs  mdct_pure_loopback.rs  mdct_recon_test.rs  mdct_roundtrip.rs  mdct_sine_test.rs  mdct_test.rs  multi_frame_interop_test.rs  opus_celt_roundtrip.rs  preemph_test.rs  proptest_encode_indices.rs  pvq_consistency_test.rs  pvq_sign_test.rs  pvq_sync_test.rs  quality_regression_test.rs  (+29 more)
