[package]
edition = "2024"
authors = ["jinti<shenjindi@fourz.cn>"]
name = "opus-rs"
version = "0.1.11"
description = "pure Rust implementation of Opus codec"
license = "BSD-3-Clause"
repository = "https://github.com/restsend/opus-rs"

[dependencies]
num-complex = "0.4"
once_cell = "1.17"

[dev-dependencies]
opusic-sys = "0.6.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "opus_bench"
harness = false

[build-dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
debug = true

[profile.bench]
inherits = "release"
lto = "thin"
codegen-units = 1
debug = true

# Profile for fuzz testing with overflow checks enabled
[profile.fuzz]
inherits = "dev"
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = false
