[package]
edition = "2024"
authors = ["jinti<shenjindi@fourz.cn>"]
name = "opus-rs"
version = "0.1.14"
description = "pure Rust implementation of Opus codec"
license = "BSD-3-Clause"
repository = "https://github.com/restsend/opus-rs"

[dependencies]

[dev-dependencies]
opusic-sys = "0.6.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "opus_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true
panic = "abort"

[profile.bench]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = false
